[build-system]
requires = ["setuptools>=46", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "python-efficiency-lab"
dynamic = ["version"]
description = "A workspace to experiment and learn about Python optimizations"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = ["python", "efficiency", "algorithms", "data structures"]
authors = [
    {name = "Jackson Waschura", email = "jackson.waschura@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "torch==2.4.1",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "flake8",
]

[tool.setuptools.packages.find]
include = ["pel"]

[tool.flake8]
max-line-length = 100
exclude = [".git", "__pycache__", "build", "dist"]
